make nexus the build server